[gd_scene load_steps=5 format=3 uid="uid://paus3m3nu"]

[ext_resource type="Script" uid="uid://cubnvwx0cff7n" path="res://Scripts/UI/PauseMenu.gd" id="1_pause"]
[ext_resource type="LabelSettings" uid="uid://cuug347ylb7m7" path="res://Assets/TItles.tres" id="2_title"]
[ext_resource type="FontFile" uid="uid://bym20gfvfp1uq" path="res://Assets/Fonts/Jersey10-Regular.ttf" id="3_2bpff"]
[ext_resource type="LabelSettings" uid="uid://b8tlir45d4qoa" path="res://Assets/HUD.tres" id="3_hud"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
layer = 100
script = ExtResource("1_pause")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="RootMenu" type="VBoxContainer" parent="Panel"]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -108.5
offset_right = 140.0
offset_bottom = 108.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Title" type="Label" parent="Panel/RootMenu"]
layout_mode = 2
text = "PAUSED"
label_settings = ExtResource("2_title")
horizontal_alignment = 1
uppercase = true

[node name="ResumeButton" type="Button" parent="Panel/RootMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_2bpff")
theme_override_font_sizes/font_size = 30
text = "RESUME"
flat = true

[node name="OptionsButton" type="Button" parent="Panel/RootMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_2bpff")
theme_override_font_sizes/font_size = 30
text = "OPTIONS"
flat = true

[node name="QuitButton" type="Button" parent="Panel/RootMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_2bpff")
theme_override_font_sizes/font_size = 30
text = "QUIT"
flat = true

[node name="UpgradeContainer" type="BoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 49.0
grow_vertical = 2
alignment = 2
vertical = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/UpgradeContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="UpgradesList" type="Label" parent="Panel/UpgradeContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2bpff")
theme_override_font_sizes/font_size = 24
text = "test"
label_settings = ExtResource("3_hud")

[node name="OptionsMenu" type="VBoxContainer" parent="Panel"]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35
alignment = 1

[node name="OptionsTitle" type="Label" parent="Panel/OptionsMenu"]
layout_mode = 2
text = "OPTIONS"
label_settings = ExtResource("2_title")
horizontal_alignment = 1
uppercase = true

[node name="LayoutRow" type="HBoxContainer" parent="Panel/OptionsMenu"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="LayoutLabel" type="Label" parent="Panel/OptionsMenu/LayoutRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Keyboard layout"
label_settings = ExtResource("3_hud")
uppercase = true

[node name="LayoutOption" type="OptionButton" parent="Panel/OptionsMenu/LayoutRow"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2bpff")

[node name="BackButton" type="Button" parent="Panel/OptionsMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_2bpff")
theme_override_font_sizes/font_size = 30
text = "BACK"
flat = true

[connection signal="pressed" from="Panel/RootMenu/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/RootMenu/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/RootMenu/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/OptionsMenu/BackButton" to="." method="_on_options_back_pressed"]
